# StroomMoment

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  IDEAS.md  MEMORY.md  README.md  ROADMAP.md  STATUS.md
apps/stroommoment/: .env.example  API_SOURCES.md  ARCHITECTURE.md  Caddyfile  DATA_MODEL.md  DEPLOYMENT.md  DESIGN_NOTES.md  MVP.md  NOTES.md  README.md  SCORING_MODEL.md  TODO.md  USER_STORIES.md  docker-compose.yml
apps/stroommoment/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
apps/stroommoment/backend/app/: __init__.py  main.py  models.py
apps/stroommoment/backend/app/api_clients/: elia.py  energy_charts.py  price_base.py
apps/stroommoment/backend/app/scoring/: __init__.py  appliances.py  weights.py  windows.py
apps/stroommoment/backend/app/services/: cache.py  normalization.py  signals.py
apps/stroommoment/backend/tests/: test_api_errors.py  test_appliances.py  test_elia.py  test_normalization.py  test_price.py  test_scoring.py
apps/stroommoment/frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
apps/stroommoment/frontend/app/: layout.tsx  page.tsx  styles.css
apps/stroommoment/frontend/app/components/: AlternativeWindows.tsx  ApplianceIcon.tsx  ApplianceImpactCard.tsx  AppliancePlanner.tsx  CandidateWindows.tsx  DataSources.tsx  DayTimeline.tsx  DecisionHero.tsx  Disclosure.tsx  EnergyStatusCard.tsx  FeedbackBlock.tsx  NerdTable.tsx  PlannerCard.tsx  (+4 more)
future-ideas/: home-assistant-belgium-hub.md  house-futureproof-checker.md  kbo-cbe-market-mapper.md  local-data-wall.md
(+5 files in other folders)
